[package]
name = "llds-protocol"
version = "0.1.0"
edition = "2021"
description = "A UDP based networking protocol for transmitting & receiving data as quickly as possible for various purposes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
