[package]
name = "llds"
version = "0.1.0"
edition = "2021"
description =  "A UDP based data transmission protocol for transmitting & receiving data as quickly as possible."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fletcher={version = "0.3.0"}
rand={version = "0.8.5"}
text-tables={version = "0.3.1"}
strum="0.26.2"
strum_macros="0.26.2"